@@ -14,8 +14,8 @@ the AutoRecover examples for recovery tasks that only run if needed."""
     [[dependencies]]
         [[[0,6,12,18]]]
             graph =  """A => fam
-                    fam:finish => B
-                    fam:finish => fam_cleanup"""
+                    fam:finish-all & fam:succeed-any => B
+                    fam:finish-all & fam:succeed-any => fam_cleanup"""
 [runtime]
     [[fam]]
 
